[package]
name = "kvs"
version = "0.1.0"
authors = ["Javier L. <135663+xleyba@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.3.4"
failure = "0.1.6"
serde = "1.0"
serde_json = "1.0"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"